<resources>
    <string name="app_name">TelebeApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="clubs">Clubs</string>
    <string name="quiz">Quiz</string>
    <string name="android">Android Development</string>
    <string name="suni">Suni Intellekt</string>
    <string name="football">Football Match</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,</string>
    <string name="profile">Profile</string>
    <string name="random">Random</string>
    <string name="todo">TODO</string>
    <string name="welcome_back_you_ve_been_missed">Welcome back.You\'ve been missed!</string>
    <string name="lets_sign_you_in">Lets sign you in.</string>
    <string name="phone_or_email">Phone,email or username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="sign_in">Sign In</string>
    <string name="account">Do you have an account? </string>
    <string name="register">Register</string>
    <string name="step1">Step 1</string>
    <string name="step2">Step 2</string>
    <string name="step3">Step 3</string>
    <string name="finish">Finish</string>
    <string name="hobbies">Hobbies</string>
    <string name="select_your_hobbies">Choose Your Hobbies</string>
    <string name="sharif">Hello,Sharif</string>
    <string name="lets">Let\'s find your Club</string>
    <string name="search">Search</string>
    <string name="club">Club</string>
    <string name="beu">Baku Engineering University</string>
    <string name="_4">4</string>
    <string name="sharif_shiraliyev">Sharif Shiraliyev</string>
    <string name="write_sth">Write something…</string>
    <string name="dunen_18_00">Dunen, 18:00</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="send">Send</string>
    <string name="about_android">About Android Development,Kotlin and Java</string>
    <string name="_255">255</string>
    <string name="member">Member</string>
    <string name="join">Join</string>
    <string name="exam">Exams!</string>
    <string name="exams">Exams</string>
    <string name="exam1">If you search University exams,you are in the right place</string>
    <string name="start">Start</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="course">Course</string>
    <string name="find_exam">Find Exam</string>
    <string name="lesson">Lesson</string>
    <string name="univers_ty">Universıty</string>
    <string name="exam_type">Exam type</string>
    <string name="_1">1.</string>
    <string name="how_many_page_have_book">How many page have book ?</string>
    <string name="three">Three</string>
</resources>