<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:background="@color/background"
    android:padding="14dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/imageProfile"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/clubProfile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/music"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/viewSupporter"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/imageProfile"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        app:layout_constraintTop_toTopOf="@id/imageProfile" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/sharif_shiraliyev"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/viewSupporter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageProfile" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/dunen_18_00"
        android:textColor="@color/gray"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageProfile"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:text="@string/lorem"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTime" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginTop="14dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/likeConst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/likeConst"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1">

        <TextView
            android:id="@+id/likeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:drawablePadding="4dp"
            android:text="@string/like"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_free"
            app:drawableTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/commentButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/commentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:drawablePadding="4dp"
            android:text="@string/comment"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_comment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sendButton"
            app:layout_constraintStart_toEndOf="@id/likeButton"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sendButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:drawablePadding="4dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/commentButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginTop="4dp"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/likeConst" />

</androidx.constraintlayout.widget.ConstraintLayout>